kubernetes/dev/spark-submit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-submit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-submit
  template:
    metadata:
      labels:
        app: spark-submit
    spec:
      containers:
      - name: spark-submit-cntr
        image: hiba25/flight-dash:spark
        imagePullPolicy: IfNotPresent
        command: ["/opt/bitnami/spark/bin/spark-submit",
                    "--master", "spark://spark-master-svc:7077",
                    "--packages", "org.apache.spark:spark-sql-kafka-0-10_2.12:3.2.4,org.apache.kafka:kafka-clients:3.2.3,org.elasticsearch:elasticsearch-spark-30_2.12:8.8.2,commons-httpclient:commons-httpclient:3.1",
                    "--total-executor-cores", "1",
                    "--executor-memory", "1g",
                    "/opt/bitnami/spark/spark_stream.py"]
